Zrobiono stronę internetową

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-witaj, okrutny świecie
+<!DOCTYPE html>
+<html lang="pl-PL">
+  <head>
+    <meta charset="utf-8">
+    <title>Witaj, Linuxie!</title>
+  </head>
+  <body>
+    <h1>Cześć, świecie!</h1>
+  </body>
+</html>
